--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <section class="s2">
         <div class="main-container">
             <h3 style="text-align: center;">Get In touch</h3>
-            <form id="contact-form">
+            <form id="contact-form" method="POST" data-netlify="true">
                 <label>Name</label>
                 <input type="text" class="input-field" name="name" required>
 
