--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <div id="dot3" class="browser-dot"></div>
                     </div>
                     <ul id="navigation">
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#contact-form">Contact</a></li>
                     </ul>
                 </div>
                 <div class="left-column">
